[package]
name = "similarity-search"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2"
rodio = "0.18.1"
aubio-rs = { version = "0.2.0", features = ["builtin", "bindgen"] }
rubato = "0.15.0"
threadpool = "1.8.1"
num_cpus = "1.16.0"
arroy = "0.3.1"
heed = "0.20.2"
rand = "0.8.5"
directories = "5.0.1"
serde = "1.0.203"
serde_json = "1.0.118"
